2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Add functions process_flags() and check_perms()
	from code of main().
	* src/groupmems.c: Harmonize the failure message in case of PAM
	failure with the other programs.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Remove isgroup(), which always returns TRUE.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Reuse the functions from libmisc/list.c to deal
	with user lists. addtogroup() was broken when realloc() move the
	memory area.
	* src/groupmems.c: Report failures with the name of the program.

2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: EXIT_READ_GROUP changed to EXIT_INVALID_GROUP.
	* src/groupmems.c: EXIT_INVALID_USERNAME changed to EXIT_INVALID_USER.

2008-07-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Really use booleans.
	* src/groupmems.c: Change isroot() to a macro that returns a
	boolean.

2008-07-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/defines.h: Make sure the booleans are defined before using
	them.

2008-07-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Added Prog global variable to indicate the name
	of the program in error messages.

2008-07-22  Lukáš Kuklínek  <lkukline@redhat.com>

	* NEWS, src/groupmems.c: Check if the user added to group actually
	exist. RedHat bug #455603
	* NEWS, src/groupmems.c: Check if the group exists in the group
	local database (/etc/group). RedHat bug #456088

2008-07-22  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h: Fix getrange prototype.

2008-07-21  Seraphim Mellos  <mellos@ceid.upatras.gr>

	* README, NEWS, configure.in, lib/pam_defs.h, src/login.c: Add
	support for OpenPAM.

2008-07-12  Nicolas François  <nicolas.francois@centraliens.net>
